--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,7 @@
 body{
-    background-color: #BBC8DE;
+    background-image:linear-gradient( #192E41,#BBC8DE);
 }
-#nav{
-background-color: rgba(128, 128, 128, 0.8);
-background-image: linear-gradient( #192E41,#BBC8DE);
-
-}
+#nav{}
 #navbar{
     margin: 0.5rem;
 }
@@ -13,15 +9,11 @@ background-image: linear-gradient( #192E41,#BBC8DE);
     width: 17rem;
 }
 #footer{
-    height: 4rem;
-    background-color: #0C2D48;
-    background-image: linear-gradient(#BBC8DE,#192E41 );
+    height: 7rem;
 }
 
 #hero{
-    
     min-height: 600px;
-
     opacity: 90%;
     background-repeat: no-repeat;
     background-position: center;
@@ -39,4 +31,10 @@ background-image: linear-gradient( #192E41,#BBC8DE);
 #heroimg{
     width: 50%;
     opacity: 90%;
+}
+.p-d{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
